--- a/package.json
+++ b/package.json
@@ -1,34 +1,42 @@
 {
-  "name": "@once-ui-system/magic-portfolio",
-  "version": "2.2.0",
+  "name": "magic-portfolio",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:fast": "next dev",
+    "dev:windows": "scripts\\dev-windows.bat",
+    "dev:clear": "scripts\\dev-windows.bat --clear",
+    "dev:analyze": "ANALYZE=true npm run build",
     "export": "next export",
     "build": "next build",
+    "build:analyze": "ANALYZE=true next build",
     "start": "next start",
-    "lint": "next lint"
+    "start:fast": "next start",
+    "lint": "next lint",
+    "validate": "node scripts/validate-mdx.js",
+    "validate:fix": "node scripts/validate-mdx.js && echo 'Please fix any errors shown above'",
+    "clean": "if exist .next rmdir /s /q .next && if exist node_modules\\.cache rmdir /s /q node_modules\\.cache",
+    "cache:clear": "if exist .next rmdir /s /q .next",
+    "perf:check": "node scripts/performance-check.js"
   },
   "dependencies": {
-    "@mdx-js/loader": "^3.1.0",
-    "@next/mdx": "^15.3.1",
     "@once-ui-system/core": "^1.2.4",
-    "classnames": "^2.5.1",
-    "cookie": "^1.0.2",
+    "@once-ui-system/react": "^1.2.4",
     "gray-matter": "^4.0.3",
-    "next": "^15.3.1",
-    "next-mdx-remote": "^5.0.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-icons": "^5.5.0",
-    "react-masonry-css": "^1.0.16",
-    "sass": "^1.86.3"
+    "next": "15.3.1",
+    "next-mdx-remote": "^4.4.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/cookie": "^0.6.0",
-    "@types/node": "^20.17.30",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "eslint": "^9.25.0",
-    "typescript": "^5.8.3"
+    "@next/mdx": "^15.3.1",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "15.3.1",
+    "sass": "^1.72.0",
+    "typescript": "^5.7.2"
   }
 }
